src/components/app/styles/App.module.css
:global(#dhis2-app-root) {
    /* establish a stacking context for the application */
    isolation: isolate;
}

:global(#dhis2-app-root div div.app-shell-app) {
    /* Remove vertical scroll bar for the full page */
    overflow: hidden;
}

:global(#dhis2-portal-root) {
    /* establish a stacking context for portals */
    isolation: isolate;
}

/* Avoid vertical layer dialog scroll on small screens */
:global(#dhis2-portal-root) aside[role='dialog'],
:global(#dhis2-portal-root) aside[role='dialog'] > div > div {
    max-height: calc(100vh - 64px);
}

/* Scrollbar width */
::-webkit-scrollbar {
    width: 6px;
    height: 6px;
}

/* Scrollbar handle */
::-webkit-scrollbar-thumb {
    background: #cbcdcf;
    border-radius: 3px;
}

.content {
    display: flex;
    flex-direction: row;
    height: calc(100vh - var(--header-height) - var(--toolbar-height));
}

.downloadContent {
    margin-top: var(--header-height);
    height: calc(100vh - var(--header-height));
}

.appMapAndTable {
    flex: auto;
    position: relative;
}

